ubiquity (2.17.4) UNRELEASED; urgency=medium

  [ Lars Uebernickel ]
  * Limit width of some long labels in prepare and wireless steps.

  [ Dimitri John Ledkov ]
  * In the ResizeWidget's, do_draw method, call the Parent's HPaned
    do_draw method, as it does not appear to be automatically called and
    thus results in no HPaned widgets getting rendered. (LP: #1260473)

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 20 Jan 2014 17:36:22 +0000

ubiquity (2.17.3) trusty; urgency=medium

  * Automatic update of included source packages: apt-setup 1:0.80ubuntu5,
    base-installer 1.122ubuntu19, grub-installer 1.78ubuntu10 (LP:
    #1265483), partman-basicmethods 57, partman-jfs 42, partman-lvm 88.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 03 Jan 2014 11:09:21 +0000

ubiquity (2.17.2) trusty; urgency=low

  [ Dan Chapman ]
  * Only check for error dialogs on test teardown so we can be sure we
    always catch them during autopilot tests. (lp: #1262575)

  [ Harald Sitter ]
  * KDE: Hardcode KDE_FULL_SESSION to ensure oxygen colors are picked up
         automatically.

  [ Jonathan Riddell ]
  * ubiquity-dm: call gsettings only if frontend is gtk
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu45, netcfg 1.114ubuntu1.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 17 Dec 2013 18:05:28 +0000

ubiquity (2.17.1) trusty; urgency=low

  [ Dmitrijs Ledkovs ]
  * Drop ntfsprogs alternative depends.
  * Merge packaging change to add debian-menu entry.
  * Tidy up autopilot tests warnings.
  * Move autopilot tests to lp:ubiquity and python3.
  * Bump to automake-1.14
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu44, grub-installer 1.78ubuntu9, netcfg 1.112ubuntu1,
    partman-base 169ubuntu1, partman-basicfilesystems 86ubuntu2,
    partman-efi 25ubuntu6, partman-ext3 80ubuntu1, yaboot-installer
    1.1.29ubuntu1.

  [ Brian Murray ]