@@ -7,6 +7,8 @@ ubiquity (2.17.4) UNRELEASED; urgency=medium
   * In the ResizeWidget's, do_draw method, call the Parent's HPaned
     do_draw method, as it does not appear to be automatically called and
     thus results in no HPaned widgets getting rendered. (LP: #1260473)
+  * Migrate ResizeWidget from HPaned to Paned, and use etched-in Frames
+    instead of EventBoxes for better aesthetic appearance of the "handle".
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 20 Jan 2014 17:36:22 +0000
 
